@@ -152,6 +152,7 @@
     * 0575 FIX: cmciii_lcp_airin, cmciii_lcp_airout, cmciii_lcp_waterin, cmciii_lcp_waterout: improved handling of warning state...
     * 0272 FIX: if checks: port type 56 (fibrechannel) is no longer inventorized per default...
     * 0577 FIX: fileinfo.groups: new date pattern is now available for inventory check as well
+    * 0578 FIX: zypper: check is always registered as soon as mk_zypper plugin detects zypper tool...
 
     Multisite:
     * 0371 Added log class filter to hostsvcevents view
